# matchflix-api

./: .coveragerc  .gitignore  Procfile  README.md  answer.py  create_db.py  exemplo.json  find_match.py  main.py  nando.py  pyproject.toml  reader.py  recomendation.py  requirements.txt  scrapper.py  settings.toml  setup.cfg  site.html  teste.py
matchflix/api/: deps.py
matchflix/api/api_v1/: api.py
matchflix/api/api_v1/endpoints/: answer.py  release.py
matchflix/cli/: load_movies.py
matchflix/crud/: __init__.py  answer.py  base.py  release.py
matchflix/db/: base.py  base_class.py  session.py
matchflix/db/models/: release.py  user.py
matchflix/extensions/: db.py
matchflix/models/: __init__.py  answer.py  movie.py  release.py  user.py
matchflix/schemas/: __init__.py  answer.py  release.py
matchflix/usecases/: __init__.py  find_match.py  find_providers.py  list_movies.py  recommend_movie.py  register_user_movies.py
migrations/: env.py
migrations/versions/: 318399a6cded_first_migration.py  e2297dc729e2_first_migration.py
tests/: test_matchflix.py
