[tool.poetry]
name = "matchflix"
version = "0.1.0"
description = ""
authors = ["Pythrick <patrhick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.55.1"
uvicorn = "^0.11.5"
dataset = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
load-movies = "matchflix.cli.load_movies:main"
create-db = "matchflix.cli.create_db:main"
